Changed classpath settings